# handler/oauth/store.go
@@ -21,31 +21,44 @@ type StoreResponse struct {
 
 // 注册客户端
 func Store(c *gin.Context) {
+	handler.SendForbidden(c, errno.ErrOAuthClientRegistrationDisabled, nil, "client registration must be approved by an administrator")
+}
+
+// AdminStore 只应挂在管理员鉴权后的路由下，用于受控创建 OAuth 客户端。
+func AdminStore(c *gin.Context) {
 	var rq StoreRequest
 	if err := c.BindJSON(&rq); err != nil {
 		handler.SendBadRequest(c, errno.ErrBadRequest, nil, err.Error())
 		return
 	}
 
-	// 域名是否有效
-	if ok := service.CheckDomain(rq.Domain); !ok {
-		handler.SendBadRequest(c, errno.ErrBadRequest, nil, "Domain is invalid.")
+	domain, err := service.NormalizeOAuthClientDomain(rq.Domain)
+	if err != nil {
+		handler.SendBadRequest(c, errno.ErrBadRequest, nil, "Domain is invalid: "+err.Error())
+		return
+	}
+	domainLookupKey, err := service.OAuthClientDomainLookupKey(domain)
+	if err != nil {
+		handler.SendBadRequest(c, errno.ErrBadRequest, nil, "Domain is invalid: "+err.Error())
 		return
 	}
 
 	// 域名是否已存在
-	if _, err := OauthServer.ClientStore.GetByDomain(rq.Domain); err != nil {
+	if _, err := OauthServer.ClientStore.GetByDomain(domainLookupKey); err != nil {
 		handler.SendBadRequest(c, errno.ErrBadRequest, nil, err.Error())
 		return
 	}
 
 	clientID, secret := service.GenerateClientIDAndSecret()
 
-	OauthServer.ClientStore.Create(&models.Client{
+	if err := OauthServer.ClientStore.Create(&models.Client{
 		ID:     clientID,
 		Secret: secret,
-		Domain: rq.Domain,
-	})
+		Domain: domain,
+	}); err != nil {
+		handler.SendError(c, errno.ErrOAuthClientCreate, nil, err.Error())
+		return
+	}
 
 	handler.SendResponse(c, nil, StoreResponse{
 		ClientId:     clientID,
